--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>Teste de sincronização - ver 1.0</h1>
+    <h1>Macovex - ver 2.0</h1>
     
 </body>
 </html>
